--- a/proxy-front/nginx.conf
+++ b/proxy-front/nginx.conf
@@ -1,12 +1,12 @@
-# the all in all server, with dynamic routes
+# the all in one server
 server {
     listen 80;
     listen [::]:80;
 
-    server_name all_in_all_server;
+    server_name all_in_one_server;
 
-    access_log /var/log/all_in_all_server.access.log;
-    error_log /var/log/all_in_all_server.error.log;
+    access_log /var/log/all_in_one_server.access.log;
+    error_log /var/log/all_in_one_server.error.log;
 
     location / {
         default_type text/html;
